--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
 <head>
 	<style href="style.css" rel="stylesheet" type="text/css" ></style>
+	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet"> 
 	<title>Ceci est un titre</title>
 	<meta charset="utf-8">
 </head>
 <body>
 	<header>
-		<h1>Titre</h1>
+		<h1 class="titre">Titre</h1>
 		<img src = "http://lorempixel.com/400/200/" alt="ceci est une image"/>
 	</header>
 	<main>
-		<img src ="http://lorempixel.com/400/200/sports/Dummy-Text" alt="Ceci est aussi une image"/>
+		<img src ="http://lorempixel.com/400/200/sports/Dummy-Text/" alt="Ceci est aussi une image"/>
 		<h2>Titre H2</h2>
 		<p>lundi 3 juillet 2017</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
