--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<style href="style.css" rel="stylesheet" type="text/css" ></style>
-	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet"> 
+<head> 
+	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet"/> 
 	<title>Ceci est un titre</title>
 	<meta charset="utf-8">
+	<link type="text/css" href="style.css" rel="stylesheet"></link>
 </head>
 <body>
 	<header>
