--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
 	<title>Ceci est un titre</title>
 	<meta charset="utf-8">
 	<link type="text/css" href="style.css" rel="stylesheet"></link>
+	<link rel="stylesheet" href="img/css/font-awesome.min.css"/>
 </head>
 <body>
 	<header>
-		<h1 class="titre">Titre<img src = "http://lorempixel.com/400/200/" alt="ceci est une image" class="banner"/></h1>
-	
+		
+		<h1 class="titre">Titre <img src = "http://lorempixel.com/400/200/" alt="ceci est une image" class="banner"/></h1>
+
 	</header>
 	<main class="main">
 		<img src ="http://lorempixel.com/400/200/sports/Dummy-Text/" alt="Ceci est aussi une image"/>
 		<h2>Titre H2</h2>
-		<p>lundi 3 juillet 2017</p>
+		<p class="date">lundi 3 juillet 2017</p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -22,10 +24,20 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</main>
-	<footer>
-		<a href="facebook.com"> </a>
-		<a href="twitter.com"></a>
-		<a href="github.com"></a>
+	<footer class="foot">
+		<a href="facebook.com">
+			<i class="fa fa-facebook-official" aria-hidden="true">
+			</i>
+
+		</a>
+		<a href="twitter.com">
+			<i class="fa fa-twitter-square" aria-hidden="true">
+			</i>
+		</a>
+		<a href="github.com">
+			<i class="fa fa-github-square" aria-hidden="true">
+			</i>
+		</a>
 
 	</footer>
 
